[FIX] elements div align center

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,10 @@ header {
   background-color: var(--bg-grey);
 }
 
+header i {
+  font-size: 1.1rem;
+}
+
 header .row {
   height: 100%;
 }
